fix: ensure if trap is focussed, it is also readable

--- a/src/scss/drawer.scss
+++ b/src/scss/drawer.scss
@@ -40,7 +40,7 @@
     padding: 5px;
     color: #047a9c;
     border: 0;
-    background-color: transparent;
+    background-color: #fff;
     opacity: 0;
   }
       .pe-trap:focus {
